--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.MainActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ShareParserActivity"
+            android:name=".ui.ShareParserActivity"
             android:noHistory="true">
             <intent-filter>
                 <action android:name="android.intent.action.SEND" />
@@ -33,7 +33,7 @@
         </activity>
         <activity
             android:theme="@style/AppTheme.Translucent"
-            android:name=".ChapterActivity" />
+            android:name=".ui.ChapterActivity" />
     </application>
 
 </manifest>
