--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile "com.android.support:appcompat-v7:$support_version"
     compile "com.android.support:design:$support_version"
     compile "com.android.support:support-v4:$support_version"
+    compile "com.android.support:cardview-v7:$support_version"
 
     compile "com.squareup.okhttp3:okhttp:$okhttp_version"
     compile "com.squareup.picasso:picasso:$picasso_version"
