--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,4 +61,5 @@ dependencies {
     compile "org.jetbrains.anko:anko-appcompat-v7:$anko_version"
     compile 'org.jsoup:jsoup:1.8.3'
     compile 'com.android.support:support-v4:23.2.1'
+    compile 'com.google.code.gson:gson:2.6.2'
 }
