--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 buildscript {
-    ext.kotlin_version = '1.0.6'
+    ext.kotlin_version = '1.1.1'
     repositories {
         jcenter()
         maven { url 'https://maven.fabric.io/public' }
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:2.3.0-beta2'
+        classpath 'com.android.tools.build:gradle:2.3.0'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'io.fabric.tools:gradle:1.22.1'
     }
@@ -69,7 +69,7 @@ android {
 
 ext {
     anko_version = '0.8.2'
-    support_version = '25.1.0'
+    support_version = '25.3.0'
     okhttp_version = '3.2.0'
     picasso_version = '2.5.2'
     photoview_version = '1.2.5'
